src/components/filter/index.scss
.c__filter {
  &__button {
    background-color: var(
      --c--contextuals--background--semantic--neutral--tertiary
    );
    height: 32px;
    display: flex;
    align-items: center;
    cursor: pointer;
    border-radius: 4px;
    border: 1px solid var(--c--contextuals--border--semantic--neutral--tertiary);
    font-size: 14px;
    font-weight: 400;
    font-family: var(--c--globals--font--families--base);
    gap: 6px;
    padding: 0 6px 0 8px;
    color: var(--c--contextuals--content--semantic--neutral--tertiary);

    &__icon {
      font-size: 1.25rem;
      transition: all var(--c--globals--transitions--duration)
        var(--c--globals--transitions--ease-out);
      &.opened {
        transform: rotate(180deg);
      }
    }

    &:not(.c__filter__button--active) {
      &:hover,
      &:focus,
      &:focus-within {
        background-color: var(
          --c--contextuals--background--semantic--neutral--tertiary-hover
        );
      }
    }

    &--active {
      background-color: var(
        --c--contextuals--background--semantic--brand--secondary
      );
      border-color: var(--c--contextuals--border--semantic--brand--secondary);
      font-weight: 500;
      color: var(--c--contextuals--content--semantic--brand--primary);

      &:hover,
      &:focus,
      &:focus-within {
        background-color: var(
          --c--contextuals--background--semantic--brand--secondary-hover
        );
      }
    }
  }

  &__item {
    width: 100%;
    display: flex;
    align-items: center;
    gap: 6px;
    justify-content: space-between;
  }

  &__label {
    display: flex;
    align-items: center;
  }

  &__popover {
    background-color: var(--c--contextuals--background--surface--primary);
    border: 1px solid var(--c--contextuals--border--surface--primary);
    border-radius: 4px;
    padding: 8px;
  }
}

